Set JVM CGroups settings if memory limit is declared